--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-virtualenv==12.0.7
-virtualenvwrapper-powershell==12.7.8
+BeautifulSoup==3.2.1
+Django==1.7.4
+django-filter==0.9.2
+djangorestframework==3.0.5
+html2text==2014.12.29
+pymongo==2.8
+requests==2.5.1
