--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ BeautifulSoup==3.2.1
 Django==1.7.4
 django-filter==0.9.2
 djangorestframework==3.0.5
+gunicorn==19.2.1
 html2text==2014.12.29
 pymongo==2.8
 requests==2.5.1
