--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-BeautifulSoup==3.2.1
 Django==1.7.4
-django-filter==0.9.2
 djangorestframework==3.0.5
 gunicorn==19.2.1
-html2text==2014.12.29
 mongoengine==0.8.7
-requests==2.5.1
+pymongo==2.8
